add install librarys commands

--- a/csv_to_sql.ipynb
+++ b/csv_to_sql.ipynb
@@ -13,18 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import librarys"
+    "## Install librarys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy import inspect\n"
+    "%pip install python-dotenv\n",
+    "%pip install sqlalchemy\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -32,12 +32,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get csv data"
+    "## Import librarys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import inspect\n",
+    "from dotenv import load_dotenv\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## set query data to variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 3306 aerolines\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "# Obtén los valores de las variables de entorno\n",
+    "db_host = os.getenv(\"DB_HOST\")\n",
+    "db_port = os.getenv(\"DB_PORT\")\n",
+    "db_user = os.getenv(\"DB_USER\")\n",
+    "db_password = os.getenv(\"DB_PASSWORD\")\n",
+    "db_name = os.getenv(\"DB_NAME\")\n",
+    "\n",
+    "print(db_host, db_port, db_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to BBDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "engine = create_engine(f\"mysql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get csv data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +264,15 @@
        "[3 rows x 110 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('airline_data.csv')\n",
+    "\n",
+    "csv_name = 'airline_data.csv'\n",
+    "df = pd.read_csv(csv_name, encoding='utf-8')\n",
     "df.head(3)"
    ]
   },
@@ -206,30 +281,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect to BBDD"
+    "## Parse csv to database table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "engine = create_engine('mysql://root:@127.0.0.1:3306/aerolines')\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Parse csv to database table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +295,7 @@
        "27000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
